[gd_scene load_steps=4 format=3 uid="uid://dn4u6wd7j6tgt"]

[ext_resource type="Script" path="res://main.gd" id="1_4tncw"]
[ext_resource type="PackedScene" uid="uid://by51q8407v5jq" path="res://room_tile.tscn" id="1_6fcyy"]
[ext_resource type="PackedScene" uid="uid://cx5qm6fcmvqat" path="res://hud.tscn" id="2_624k5"]

[node name="Main" type="Node2D"]
script = ExtResource("1_4tncw")
tile_scene = ExtResource("1_6fcyy")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 240.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4.79779, 2.70815)
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0.384314, 0, 1)

[node name="StartingTile" parent="." instance=ExtResource("1_6fcyy")]

[node name="HUD" parent="." instance=ExtResource("2_624k5")]

[node name="StartingTileMarker" type="Marker2D" parent="."]
position = Vector2(476, 552)

[node name="NewTileMarker" type="Marker2D" parent="."]
position = Vector2(993, 261)

[connection signal="make_indoor_tile" from="HUD" to="." method="generate_indoor_tile"]
